Homework commit: Terraform, Ansible, GitHub Actions

--- a/ansible/roles/zabbix/tasks/main.yml
+++ b/ansible/roles/zabbix/tasks/main.yml
@@ -16,7 +16,7 @@
         "id": 1
       }
   register: auth_result
-  no_log: true  # Скрыть логи с паролем
+  no_log: true
 
 - name: Create Zabbix Host
   uri:
