--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -9,6 +9,14 @@
     zabbix_api_pass: "{{ zabbix_api_pass }}"
   
   tasks:
+    - name: Configure Windows VMs
+      hosts: windows
+      gather_facts: no
+      tasks:
+        - name: Wait for WinRM connectivity
+          wait_for_connection:
+            timeout: 600
+      
     - name: Install Zabbix Agent
       win_package:
         path: https://repo.zabbix.com/zabbix/6.0/windows/zabbix_agent-6.0.0.win-amd64.msi
